--- a/index.html
+++ b/index.html
@@ -115,8 +115,26 @@
   </div>
 </div>
 
- 
-<section class="hero"></section>
+<div style="padding: 20px;">
+    <div class="row">
+    <div class="col-md-6">
+          <div class="about_img"><img src="img/fiqur.jpg" style="top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); pointer-events: none;" ></div>
+       </div>
+       <div class="col-md-6">
+          <div class="about_taital_main">
+             <div class="about_taital" style="font-size: 20px; font-family:'Poppins', sans-serif; text-align: center; color: red; padding: 20px; ">Man Jadda Wajada</div>
+            <p>Memiliki tiga suku kata, man yang berarti siapa, jadda berarti bersungguh-sungguh, serta wajada berarti mendapatkan, pepatah ini menjelaskan bahwa siapa yang bersungguh-sungguh, maka ia akan mendapatkannya.</p>
+            <p>Ungkapan tersebut memiliki arti bahwa siapa yang bersungguh maka ia akan menemukan atau siapa yang bersungguh-sungguh maka ia akan dapat. Bisa dibilang ungkapan Man Jadda Wa Jadda mirip dengan peribahasa berakit-rakit ke hulu berenang ke tepian, bersakit-sakit dahulu bersenang-senang kemudian .</p>
+          </div>
+       </div>
+    </div>
+
+</div>
+
+<div style="padding: 20px; height: 100px; display: flex; justify-content: center; align-items: center; text-align: center;">
+    <p>(C) Copyright Personal Web Kelas Terbuka Interaktif Taufiqurrohman</p>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="navbar.js"></script>
 </body>
