--- a/index.html
+++ b/index.html
@@ -91,34 +91,23 @@
     
         </div>
         </header>
+<div class="container-bg">
 
-<div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/bg.avif" class="d-block w-100" alt="...">
-        <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); pointer-events: none;" ></div>
-        <div class="carousel-caption  d-md-block">
-        <h5 style="font-size: 20px; color: red; font-family: 'Poppins', sans-serif; ">Kelas <span style="color: white;">Terbuka</span></h5><p></p><p></p>
-        <p style="   font-family: 'Poppins', sans-serif;">"Jangan cintai orang yg tidak mencintai Allah, kalau Allah saja ia tinggalkan, apalagi kamu"</p>
-        <p style="color: red; font-family: 'Poppins', sans-serif;">(Imam Syafi'i)</p>
-        </div>
-    </div>
-    <div class="carousel-item">
-      <img src="img/bg.avif" class="d-block w-100" alt="...">
-              <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); pointer-events: none;" ></div>
-        <div class="carousel-caption  d-md-block">
-        <h5 style="font-size: 20px; color: red; font-family: 'Poppins', sans-serif;">Kelas <span style="color: white;">Terbuka</span></h5><p></p><p></p>
-        <p style="   font-family: 'Poppins', sans-serif;">"Bila kau tak mau merasakan lelahnya belajar, maka kau akan menanggung pahitnya kebodohan"</p>
-        <p style="color: red; font-family: 'Poppins', sans-serif;">(Imam Syafi'i)</p>
-        </div>
-    </div>
-  </div>
+        <h5 
+        style="
+        font-size: 20px;
+        color: red;
+        font-family: 'Poppins', sans-serif; display: flex; justify-content: center; padding-top: 20px;
+        ">Kelas <span style="color: white;">Terbuka</span></h5><p></p><p></p>
+        <p style="   font-family: 'Poppins', sans-serif; font-size: 15px; display: flex; text-align: center; padding-top: 30px; color: black; ">"Jangan cintai orang yg tidak mencintai Allah, kalau Allah saja ia tinggalkan, apalagi kamu"</p>
+        <p style="color: red; font-family: 'Poppins', sans-serif; font-size: 15px; display: flex; justify-content: center;">(Imam Syafi'i)</p>
+
 </div>
 
-<div style="padding: 20px;">
+<div style="padding: 15px;">
     <div class="row">
     <div class="col-md-6">
-          <div class="about_img"><img src="img/fiqur.jpg" style="top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); pointer-events: none;" ></div>
+          <div class="about_img"><img src="img/fiqur.jpg" style="top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); pointer-events: none; border-radius: 10px;" ></div>
        </div>
        <div class="col-md-6">
           <div class="about_taital_main">
