--- a/Berita/index.html
+++ b/Berita/index.html
@@ -102,7 +102,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="#">Berita</a></li>
+            <li><a href="">Berita</a></li>
             <li><a href="./Kontak/index.html">Kontak</a></li>
           </ul>
         </nav>
