--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li><a href="#"><span>GIT</span></a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Berita</a></li>
+                    <li><a href="/Berita/index.html">Berita</a></li>
                     <li><a href="./Kontak/index.html">Kontak</a></li>
                 </ul>
                 
